overlays/integration/backend/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dual-job-date-api
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
    - hosts:
        - "dual-dating-backend.msd-moss-test.fh-joanneum.at"
      secretName: dual-job-date-tls
  rules:
    - host: "dual-dating-backend.msd-moss-test.fh-joanneum.at"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: dual-job-date-api
                port:
                  number: 8080
